# OptimizeDGEMM

./: CMakeLists.txt  README.md  environment.yml  run.sh
plot/: collect.py  plot.py  tmp
src/: dgemm-blas.c  main.cxx  sgemm-blas.c  sgemm-block-128-v2.c  sgemm-block-128.c  sgemm-block-160.c  sgemm-block-192.c  sgemm-block-2.c  sgemm-block-256.c  sgemm-block-32.c  sgemm-block-4.c  sgemm-block-41.c  sgemm-block-64.c  sgemm-naive-ijk.c  sgemm-naive-jki.c  sgemm-naive-kji.c  sgemm-reg-block-1x4.c  sgemm-reg-block-2.c  sgemm-reg-block-4.c
src/avx/: dgemm-avx2.c
src/avx2/: dgemm-4x4-unroll.c  dgemm-4x4.c  dgemm-8x4-unroll.c  dgemm-avx2.c
src/avx2-cache-blocking/: dgemm-8x4-unroll.c
src/avx2-packing/: dgemm-8x4-unroll.c  dgemm-8x4.c
src/macro-kernel/: dgemm-160-micro-4x4.c  dgemm-320-micro-4x4.c  dgemm-320-nkm.c  dgemm-4x4.c  dgemm-640-micro-4x4.c  dgemm-nkm.c
src/micro-kernel/: dgemm-2x2.c  dgemm-4x4.c
src/naive/: dgemm-ijk.c  dgemm-jki.c  dgemm-kji.c  dgemm-knm.c  dgemm-naive-ijk.c  dgemm-naive-jki.c  dgemm-naive-kji.c
src/pack/: -2.c  -pack.c  dgemm-1.c  dgemm-pack.c  dgemm-test.c
src/pure-c-code/: dgemm-4x8.c  dgemm-naive-mnk.c  dgemm-naive-nkm.c
src/register-blocking/: dgemm-2x2.c  dgemm-4x4.c  dgemm-block-2x2.c  dgemm-block-4x4.c
src/sse/: dgemm-sse.c
